# nwfc

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
src/exe/: CMakeLists.txt  main.cpp
src/nwfc/: CMakeLists.txt
src/nwfc/src/constraint/: Constraint.hh
src/nwfc/src/constraint/bitset/: AllDifferentBitset.hh  CardinalityBitset.hh  CompatibilityBitset.hh  ManhattanIncompatibilityBitset.hh
src/nwfc/src/pickers/value/: ValuePicker.hh  WeightBasedValuePicker.cc  WeightBasedValuePicker.hh
src/nwfc/src/pickers/variable/: ValueOrientedVariablePicker.hh  VariablePicker.hh
src/nwfc/src/state/: State.cc  State.hh
src/nwfc/src/utils/: Random.cc  Random.hh
src/nwfc/src/utils/log/: Log.cc  Log.hh
src/nwfc/src/variable/domain/: BitsetDomain.cc  BitsetDomain.hh  Domain.hh
src/nwfc/src/variable/layout/2d/: GridLayout.cc  GridLayout.hh
src/nwfc/test/: CMakeLists.txt
src/nwfc/test/nwfc/constraint/: AllDiff.test.cc  Compat.test.cc  ManhattanIncompat.test.cc
src/nwfc/test/nwfc/state/: ProgressBacjkump.test.cc  ProgressBacktrack.test.cc
src/nwfc/test/nwfc/variable/domain/: BitsetDomain.test.cc
